--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import '~antd/dist/antd.css';
+@import 'App.css';
+@import 'SignIn.css';
+@import 'Slogan.css';
+
 body {
   margin: 0;
   padding: 0;
